@@ -33,61 +33,70 @@
       then add a startup script to launch it. 
     </para>
     <para>
-      First, we'll add the dependencies for Jetty to the pom.xml:
+      First, we'll add the dependencies for Jetty to the <code>pom.xml</code>:
     </para>
-    <code>
-      <dependency>
-        <groupId>org.eclipse.jetty</groupId>
-        <artifactId>jetty-webapp</artifactId>
-        <version>7.4.4.v20110707</version>
-      </dependency>
-      <dependency>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>jsp-2.1-glassfish</artifactId>
-        <version>2.1.v20100127</version>
-      </dependency>
-    </code>
+      <example>
+          <title>Jetty dependencies - pom.xml</title>
+          <programlisting language="xml"><![CDATA[
+<dependency>
+    <groupId>org.eclipse.jetty</groupId>
+    <artifactId>jetty-webapp</artifactId>
+    <version>7.4.4.v20110707</version>
+</dependency>
+<dependency>
+    <groupId>org.mortbay.jetty</groupId>
+    <artifactId>jsp-2.1-glassfish</artifactId>
+    <version>2.1.v20100127</version>
+</dependency>
+      ]]></programlisting>
+                  </example>
     <para>
       Then we'll change the scope of the servlet-api artifact from <code>provided</code> to <code>compile</code>.
       This library is normally provided at runtime by the application container. Since we're self-hosting,
       it needs to be included directly.  Make sure the servlet-api dependency looks like this:
     </para>
-    <code>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-        <scope>compile</scope>
-      </dependency>
-    </code>
+      <example>
+          <title>servlet-api dependencies - pom.xml</title>
+          <programlisting language="xml"><![CDATA[
+<dependency>
+    <groupId>javax.servlet</groupId>
+    <artifactId>servlet-api</artifactId>
+    <version>2.5</version>
+    <scope>compile</scope>
+</dependency>
+      ]]></programlisting>
+                  </example>
     <para>
       We could provide a complicated command-line to Heroku to launch the app. Instead, we'll simplify
       the command-line by using the appassembler-maven-plugin to create a launch script. Add the plugin
       to your pom's build/plugins section:
     </para>
-    <code>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>appassembler-maven-plugin</artifactId>
-        <version>1.1.1</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals><goal>assemble</goal></goals>
-            <configuration>
-              <assembleDirectory>target</assembleDirectory>
-              <extraJvmArguments>-Xmx512m</extraJvmArguments>
-              <programs>
-                <program>
-                  <mainClass>Main</mainClass>
-                  <name>webapp</name>
-                </program>
-              </programs>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </code>
+      <example>
+          <title>REST-Client configuration - pom.xml</title>
+          <programlisting language="xml"><![CDATA[
+<plugin>
+<groupId>org.codehaus.mojo</groupId>
+<artifactId>appassembler-maven-plugin</artifactId>
+<version>1.1.1</version>
+<executions>
+  <execution>
+    <phase>package</phase>
+    <goals><goal>assemble</goal></goals>
+    <configuration>
+      <assembleDirectory>target</assembleDirectory>
+      <extraJvmArguments>-Xmx512m</extraJvmArguments>
+      <programs>
+        <program>
+          <mainClass>Main</mainClass>
+          <name>webapp</name>
+        </program>
+      </programs>
+    </configuration>
+  </execution>
+</executions>
+</plugin>
+      ]]></programlisting>
+                  </example>
     <para>
       Finally, switch the packaging from <code>war</code> to <code>jar</code>. That's it for the pom.
     </para>
@@ -95,34 +104,31 @@
       Now that the application is ready to be self-hosted, create a simple <code>Main</code> to 
       bootstrap Jetty and host the servlet.
     </para>
-    <para>
-      Create <code>src/main/java/Main.java</code> like this:
-    </para>
-
-    <code>
-      import org.eclipse.jetty.server.Server;
-      import org.eclipse.jetty.webapp.WebAppContext;
-      public class Main
-      {
-        public static void main(String[] args) throws Exception
-        {
-            String webappDirLocation = "src/main/webapp/";
-            String webPort = System.getenv("PORT");
-            if(webPort == null || webPort.isEmpty()) {
-                webPort = "8080";
-            }
-            Server server = new Server(Integer.valueOf(webPort));
-            WebAppContext root = new WebAppContext();
-            root.setContextPath("/");
-            root.setDescriptor(webappDirLocation+"/WEB-INF/web.xml");
-            root.setResourceBase(webappDirLocation);
-            root.setParentLoaderPriority(true);
-            server.setHandler(root);
-            server.start();
-            server.join();
+      <example>
+          <title>src/main/java/Main.java</title>
+          <programlisting language="java"><![CDATA[
+import org.eclipse.jetty.server.Server;
+import org.eclipse.jetty.webapp.WebAppContext;
+public class Main {
+    public static void main(String[] args) throws Exception {
+        String webappDirLocation = "src/main/webapp/";
+        String webPort = System.getenv("PORT");
+        if(webPort == null || webPort.isEmpty()) {
+            webPort = "8080";
         }
+        Server server = new Server(Integer.valueOf(webPort));
+        WebAppContext root = new WebAppContext();
+        root.setContextPath("/");
+        root.setDescriptor(webappDirLocation+"/WEB-INF/web.xml");
+        root.setResourceBase(webappDirLocation);
+        root.setParentLoaderPriority(true);
+        server.setHandler(root);
+        server.start();
+        server.join();
     }
-    </code>
+}
+      ]]></programlisting>
+    </example>
     <para>
       Notice the use of environment variable "PORT" for discovering which port to use. Heroku and the
       Neo4j Add-on use a number of environment variable to configure the application. Next, we'll
@@ -133,25 +139,32 @@
       In the SDN Todos example, <code>src/main/resources/META-INF/spring/applicationContext-graph.xml</code>
       was modified to look like this:
     </para>
-    <code>
-      <neo4j:config graphDatabaseService="graphDatabaseService"/>
-      <bean id="graphDatabaseService" 
-        class="org.springframework.data.neo4j.rest.SpringRestGraphDatabase">
-        <constructor-arg index="0" value="${NEO4J_REST_URL}" />
-        <constructor-arg index="1" value="${NEO4J_LOGIN}" />
-        <constructor-arg index="2" value="${NEO4J_PASSWORD}" />
-      </bean>
-    </code>
+      <example>
+          <title>Spring configuration - applicationContext-graph.xml</title>
+          <programlisting language="xml"><![CDATA[
+<neo4j:config graphDatabaseService="graphDatabaseService"/>
+<bean id="graphDatabaseService"
+    class="org.springframework.data.neo4j.rest.SpringRestGraphDatabase">
+    <constructor-arg index="0" value="${NEO4J_REST_URL}" />
+    <constructor-arg index="1" value="${NEO4J_LOGIN}" />
+    <constructor-arg index="2" value="${NEO4J_PASSWORD}" />
+</bean>
+]]></programlisting>
+                  </example>
     <para>
       Before provisioning at Heroku, test the application locally. First make sure you've got
       Neo4j server running locally, using default configuration. Then set the following
       environment variables:
     </para>
-    <code>
-      export NEO4J_REST_URL=http://localhost:7474/db/data
-      export NEO4J_LOGIN=""
-      export NEO4J_PASSWORD=""
-    </code>
+      <example>
+          <title>environment variables</title>
+          <programlisting><![CDATA[
+export NEO4J_REST_URL=http://localhost:7474/db/data
+export NEO4J_LOGIN=""
+export NEO4J_PASSWORD=""
+      </dependency>
+      ]]></programlisting>
+                  </example>
     <para>
       Now you can launch the app by running <code>sh target/bin/webapp</code>. If running the SDN Todos
       example, you can test it by running <code>./bin/todos list</code>. That should return an empty
@@ -161,7 +174,8 @@
       For details about the <code>todos</code> script, see the readmen included with the example.
     </para>
   </section>
-  <section>
+
+    <section>
     <title>Deploy to Heroku</title>
     <para>
       With a self-hosted application ready, deploying to Heroku needs a few more steps. First,
@@ -169,39 +183,51 @@
       line identifying the command line which launches the application.
     </para>
     <para>
-      The contents of the <code>Profile</code> should contain:
+      The contents of the <code>Procfile</code> should contain:
     </para>
-    <code>
-      web: sh target/bin/webapp
-    </code>
+        <example>
+            <title>Procfile</title>
+            <programlisting><![CDATA[
+web: sh target/bin/webapp
+]]></programlisting>
+    </example>
     <para>
-      Now initialize a local git repository, adding all the project files:
+
+        <example>
+            <title>deploy to heroku</title>
+            <programlisting><![CDATA[
+# Initialize a local git repository, adding all the project files
+  git init
+  git add .
+  git commit -m "initial commit"
+
+# Provision a Heroku stack, add the Neo4j Add-on and deploy the appication
+
+  heroku create --stack cedar
+  heroku addons:add neo4j
+  git push heroku master
+
+]]></programlisting>
+</example>
     </para>
-    <code>
-      git init
-      git add .
-      git commit -m "initial commit"
-    </code>
-      Finally, provision a Heroku stack, add the Neo4j Add-on and deploy the appication.
-    </para>
-    <code>
-      heroku create --stack cedar
-      heroku addons:add neo4j
-      git push heroku master
-    </code>
+    <note>
     <para>
       Note that the stack must be "cedar" to support running Java. Check that the process
       is running by using <code>heroku ps</code>, which should show a "web.1" process
       in the "up" state. Success!
     </para>
+    </note>
     <para>
-      For the SDN Todos application, you can try out the remote application using the "-r" 
+      For the SDN Todos application, you can try out the remote application using the <code>-r</code>
       switch with the <code>bin/todo</code> script like this:
     </para>
-    <code>
-      ./bin/todo -r mk "tweet thanks for the good work @mesirii @akollegger"
-      ./bin/todo -r list
-    </code>
+        <example>
+            <title>Session with todo script</title>
+            <programlisting><![CDATA[
+./bin/todo -r mk "tweet thanks for the good work @mesirii @akollegger"
+./bin/todo -r list
+]]></programlisting>
+</example>
     <para>
       To see the Neo4j graph you just created through Heroku, use <code>heroku config</code> to reveal 
       the <code>NEO4J_URL</code> environment variable, which will take you to Neo4j's Webadmin.
