@@ -4,8 +4,10 @@ Spring Data Graph Changelog
 Changes in version 2.0.0.RELEASE (2011-12-23)
 ---------------------------------------------
 * Updated Neo4j to 1.6.M02, SpringFramework to 3.0.7.RELEASE, Spring-Data-Commons to 1.2.0.RELEASE
-* updated documentation and examples
-*
+* updated documentation and examples, added chapter on how to deploy an SDN backed sample app to Heroku
+* allow customization for index names, e.g. for multi-tenancy
+* object typed fields are not converted if the actual instance can be stored by Neo4j
+* cleanup of maven dependencies on neo4j, logging frameworks,
 
 Changes in version 2.0.0.RC1 (2011-11-11)
 -----------------------------------------
